tests/baselines/reference/constDeclarations-ambient.errors.txt
constDeclarations-ambient.ts(6,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== constDeclarations-ambient.ts (1 errors) ====
    // No error
    declare const c1: boolean;
    declare const c2: number;
    declare const c3, c4 :string, c5: any;
    
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        const c6;
        const c7: number;
    }